fix: layout shift issue in homepage

--- a/src/assets/scss/blocks/_main.scss
+++ b/src/assets/scss/blocks/_main.scss
@@ -2,8 +2,19 @@
 
 .main {
 	// show the homepage's main content only if it's focused/targeted through skip-link
-	[data-page='home'] &:not(:focus) {
+	[data-page='home'] &:not(:target) {
 		@extend .visually-hidden;
+		bottom: -100vh;
+		width: 0;
+		height: 0;
+		min-width: 0;
+		min-height: 0;
+	}
+
+	[data-page='home'] & {
+		--padding-x: 2rem;
+		--padding-y: 2rem;
+		margin: var(--padding-x) var(--padding-y);
 	}
 
 	&-container[data-page='home'] {
@@ -20,7 +31,6 @@
 	:not([data-page='home']) + .root &-container {
 		--padding-x: 0;
 		--padding-y: 0;
-		height: 100%;
 
 		@media (min-width: vars.$breakpoint-desktop) {
 			--padding-x: 2rem;
