--- a/src/assets/scss/blocks/_window.scss
+++ b/src/assets/scss/blocks/_window.scss
@@ -7,7 +7,6 @@
 	display: grid;
 	grid-template-rows: auto auto 1fr;
 	width: 100%;
-	height: 100%;
 	background-color: var(--window-background-color);
 	overflow: auto;
 
